// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dependabot allowing allows testlib only 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    allow:
      - dependency-name: testlib
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot assignees empty assignees 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot assignees multiple assignees 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    assignees:
      - testUserOne
      - testUserTwo
"
`;

exports[`dependabot assignees no assignees 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot assignees one assignee 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    assignees:
      - testUserOne
"
`;

exports[`dependabot default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot groups applies-to 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    groups:
      group-one:
        applies-to: security-updates
        patterns:
          - "*"
"
`;

exports[`dependabot groups dependency-type 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    groups:
      group-one:
        dependency-type: development
        patterns:
          - "*"
"
`;

exports[`dependabot groups no groups 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot groups two groups 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    groups:
      group-one:
        patterns:
          - testlib-*
      group-two:
        patterns:
          - "*"
        exclude-patterns:
          - otherlib-*
"
`;

exports[`dependabot groups update-types 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    groups:
      group-one:
        update-types:
          - minor
          - patch
        patterns:
          - "*"
"
`;

exports[`dependabot ignoring ignore with a single version 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: testlib
        versions:
          - ">10.x"
      - dependency-name: projen
"
`;

exports[`dependabot ignoring ignore with ignoreProjen set to false 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
"
`;

exports[`dependabot ignoring ignore with multiple versions 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: testlib
        versions:
          - 10.x
          - 20.x
      - dependency-name: projen
"
`;

exports[`dependabot ignoring ignore with no version 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: testlib
      - dependency-name: projen
"
`;

exports[`dependabot ignoring ignores projen by default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot open-pull-requests-limit open pull requests limit not set 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot open-pull-requests-limit open pull requests limit set to 0 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    open-pull-requests-limit: 0
"
`;

exports[`dependabot open-pull-requests-limit open pull requests limit set to positive integer 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    open-pull-requests-limit: 5
"
`;

exports[`dependabot private registries 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
registries:
  npm-registry-npm-pkg-github-com:
    type: npm-registry
    url: https://npm.pkg.github.com
    token: \${{ secrets.TOKEN }}
    replaces-base: true
    username: test
    password: \${{ secrets.TOKEN }}
    key: abc123
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    registries:
      - npm-registry-npm-pkg-github-com
"
`;

exports[`dependabot reviewers empty reviewers 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot reviewers multiple reviewers 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    reviewers:
      - testUserOne
      - testUserTwo
"
`;

exports[`dependabot reviewers no reviewers 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot reviewers one reviewer 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    reviewers:
      - testUserOne
"
`;

exports[`dependabot target branch develop as the target branch 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    target-branch: develop
"
`;

exports[`dependabot target branch empty target branch 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;
